Fix Firefox layout issues caused by Flexbox implementation [#137029375]

--- a/css/app.less
+++ b/css/app.less
@@ -1,10 +1,14 @@
 .app {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
   height: 100%;
   background: #333;
   color: #ccc;
+
+  .app-container {
+    height:100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 
   .label {
     font-size: 16px;
