--- a/css/meter.less
+++ b/css/meter.less
@@ -1,11 +1,14 @@
 .meter-thermoscope {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
   background: #333;
   color: #ccc;
+  height:100%;
 
+  .app-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+  }
   .label {
     font-size: 16px;
     text-align: center;
